Added index page for publisher content

--- a/index.html
+++ b/index.html
@@ -1,35 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Guvvala.xyz - Personal Project Hub</title>
-    <meta name="description" content="Discover professional and educational projects by Guvvala. A clean, minimal hub for various web applications and tools.">
+    <title>Guvvala.xyz - Innovation & Educational Tools Hub</title>
+    <meta name="description"
+        content="Discover professional tools and educational platforms by Guvvala. Home of the Leben in Deutschland Coach and other projects designed for efficiency and learning.">
     <link rel="stylesheet" href="style.css">
     <!-- Google AdSense -->
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-PLACEHOLDER" crossorigin="anonymous"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8271953347424779"
+        crossorigin="anonymous"></script>
 </head>
+
 <body>
     <div class="container">
         <header>
             <h1>guvvala.xyz</h1>
-            <p>Welcome to my personal project hub. I build tools and platforms designed to solve real-world problems with a focus on simplicity and efficiency.</p>
+            <p class="tagline">Empowering growth through simple, effective digital tools.</p>
         </header>
 
+        <section class="about-me">
+            <h2>About the Projects</h2>
+            <p>
+                Guvvala.xyz is a dedicated platform for hosting high-impact web applications and educational resources.
+                Our mission is to take complex information—such as legal requirements, technical documentation, or
+                educational curricula—and transform it into accessible, interactive, and user-friendly digital
+                experiences.
+            </p>
+            <p>
+                Every project hosted here is built with a "User-First" philosophy. We believe that technology should
+                simplify life, not complicate it. Whether it's helping immigrants integrate with the
+                <strong>Leben in Deutschland Coach</strong> or developing utility scripts for data processing,
+                clarity and performance are our top priorities.
+            </p>
+        </section>
+
         <section class="projects">
-            <h2>Featured Projects</h2>
+            <h2>Featured Applications</h2>
             <div class="project-card">
                 <h3>Leben in Deutschland Coach</h3>
-                <p>A comprehensive practice tool for the "Life in Germany" (LiD) test, helping users prepare with interactive quizzes and multi-language support.</p>
-                <a href="https://lebenindeutschlandcoach.guvvala.xyz" target="_blank">Visit Site →</a>
+                <p>
+                    Our flagship educational tool designed to help users prepare for the German integration and
+                    citizenship tests. It features the full official question catalog, state-specific questions,
+                    and multi-language support (English/German) to ensure everyone has a fair chance at success.
+                </p>
+                <div class="metrics">
+                    <span>✓ 460+ Questions</span>
+                    <span>✓ Mobile Optimized</span>
+                    <span>✓ Free to Use</span>
+                </div>
+                <a href="https://lebenindeutschlandcoach.guvvala.xyz" target="_blank" class="cta-link">Launch Practice
+                    Tool →</a>
             </div>
         </section>
 
+        <section class="mission">
+            <h2>Our Vision</h2>
+            <p>
+                In an increasingly digital world, the bridge between information and understanding is often
+                narrow. We build that bridge. By leveraging modern web technologies and clean design, we ensure
+                that essential tools are available to anyone, anywhere, regardless of their technical background.
+            </p>
+            <p>
+                Stay tuned for more updates and new tools as we continue to expand our directory of professional
+                utilities and educational coaches.
+            </p>
+        </section>
+
         <footer>
-            <a href="about.html">About</a>
-            <a href="contact.html">Contact</a>
-            <a href="privacy-policy.html">Privacy Policy</a>
-        </footer
+            <div class="footer-links">
+                <a href="about.html">About</a>
+                <a href="contact.html">Contact</a>
+                <a href="privacy-policy.html">Privacy Policy</a>
+            </div>
+            <p class="copyright">&copy; 2025 Guvvala Projects. All rights reserved.</p>
+        </footer>
     </div>
 </body>
+
 </html>
