Added android app information

--- a/index.html
+++ b/index.html
@@ -55,6 +55,44 @@
             </div>
         </section>
 
+        <section class="beta-testing">
+            <h2>Android App Beta Testing</h2>
+            <p>
+                We are currently in the <strong>Closed Testing</strong> phase for our upcoming Android application.
+                Your feedback is crucial for improving the user experience and ensuring app stability.
+                To participate, please follow these two essential steps:
+            </p>
+
+            <div class="test-steps">
+                <div class="step-card">
+                    <div class="step-number">Step 1</div>
+                    <h3>Join the Testing Group</h3>
+                    <p>Google Play requires testers to be part of a registered group. Join our official community to
+                        gain access.</p>
+                    <a href="https://groups.google.com/g/lid-training-app-closed-testers" target="_blank"
+                        class="step-btn">Join Testing Group →</a>
+                </div>
+
+                <div class="step-card">
+                    <div class="step-number">Step 2</div>
+                    <h3>Download & Test</h3>
+                    <p>Once joined, use the link below to opt-in as a tester and download the app directly from the Play
+                        Store.</p>
+                    <a href="https://play.google.com/store/apps/details?id=com.survval.lidcoach" target="_blank"
+                        class="step-btn">Get App on Play Store →</a>
+                </div>
+            </div>
+
+            <div class="support-box">
+                <h4>Help & Support</h4>
+                <p>Encountered a bug or have a suggestion? Reach out to us directly:</p>
+                <ul>
+                    <li><strong>Email:</strong> developers@guvvala.xyz</li>
+                    <li><strong>Community:</strong> Post in the Google Group for shared support</li>
+                </ul>
+            </div>
+        </section>
+
         <section class="mission">
             <h2>Our Vision</h2>
             <p>
