Update personal bio

--- a/index.html
+++ b/index.html
@@ -20,19 +20,40 @@
             <p class="tagline">Empowering growth through simple, effective digital tools.</p>
         </header>
 
-        <section class="about-me">
-            <h2>About the Projects</h2>
+        <section class="bio">
+            <div class="bio-content">
+                <div class="bio-text">
+                    <h2>About the Developer</h2>
+                    <p>
+                        I am a <strong>Senior Software Developer and Technical Consultant</strong> with several years of
+                        professional experience in the IT industry. My passion lies in masterminding robust
+                        architectures and building high-performance applications using modern <strong>JavaScript
+                            technologies</strong>.
+                    </p>
+                    <p>
+                        Throughout my career, I have focused on delivering scalable, maintainable code and solving
+                        complex
+                        business problems through elegant technical solutions. Guvvala.xyz serves as a portfolio of my
+                        commitment
+                        to excellence in software engineering and my drive to create tools that make a difference.
+                    </p>
+                </div>
+            </div>
+        </section>
+
+        <section class="platform-vision">
+            <h2>The Project Hub</h2>
             <p>
                 Guvvala.xyz is a dedicated platform for hosting high-impact web applications and educational resources.
-                Our mission is to take complex information—such as legal requirements, technical documentation, or
+                My mission is to take complex information—such as legal requirements, technical documentation, or
                 educational curricula—and transform it into accessible, interactive, and user-friendly digital
                 experiences.
             </p>
             <p>
-                Every project hosted here is built with a "User-First" philosophy. We believe that technology should
+                Every project hosted here is built with a "User-First" philosophy. I believe that technology should
                 simplify life, not complicate it. Whether it's helping immigrants integrate with the
                 <strong>Leben in Deutschland Coach</strong> or developing utility scripts for data processing,
-                clarity and performance are our top priorities.
+                clarity and performance are my top priorities.
             </p>
         </section>
 
