Update personal bio

--- a/about.html
+++ b/about.html
@@ -4,30 +4,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About - guvvala.xyz</title>
+    <title>About the Developer - guvvala.xyz</title>
     <link rel="stylesheet" href="style.css">
     <!-- Google AdSense -->
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-PLACEHOLDER"
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8271953347424779"
         crossorigin="anonymous"></script>
 </head>
 
 <body>
     <div class="container">
         <header>
-            <h1>About Guvvala</h1>
-            <p>I am a developer passionate about creating useful, accessible, and fast web applications.</p>
+            <h1>About the Developer</h1>
+            <p class="tagline">Senior Software Developer & Technical Consultant</p>
         </header>
 
-        <section>
-            <p>This site serves as a central hub for my various projects, ranging from educational tools like the
-                <strong>Leben in Deutschland Coach</strong> to professional utilities. My goal is to provide
-                high-quality resources that make complex tasks simpler.</p>
+        <section class="bio">
+            <div class="bio-content">
+                <p>
+                    I am a <strong>Senior Software Developer and Technical Consultant</strong> with several years of
+                    professional experience in the IT industry. My passion lies in masterminding robust
+                    architectures and building high-performance applications using modern <strong>JavaScript
+                        technologies</strong>.
+                </p>
+                <p>
+                    Throughout my career, I have focused on delivering scalable, maintainable code and solving complex
+                    business problems through elegant technical solutions. Guvvala.xyz serves as a portfolio of my
+                    commitment
+                    to excellence in software engineering and my drive to create tools that make a difference.
+                </p>
+                <p>
+                    This site serves as a central hub for my various projects, ranging from educational tools like the
+                    <strong>Leben in Deutschland Coach</strong> to professional utilities. My goal is to provide
+                    high-quality resources that make complex tasks simpler.
+                </p>
+            </div>
         </section>
 
         <footer>
-            <a href="index.html">Home</a>
-            <a href="contact.html">Contact</a>
-            <a href="privacy-policy.html">Privacy Policy</a>
+            <div class="footer-links">
+                <a href="index.html">Home</a>
+                <a href="contact.html">Contact</a>
+                <a href="privacy-policy.html">Privacy Policy</a>
+            </div>
+            <p class="copyright">&copy; 2025 Guvvala Projects. All rights reserved.</p>
         </footer>
     </div>
 </body>
