Modified index page

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     and multi-language support (English/German) to ensure everyone has a fair chance at success.
                 </p>
                 <div class="metrics">
-                    <span>✓ 460+ Questions</span>
+                    <span>✓ 300 General + 10 State Specific Questions</span>
                     <span>✓ Mobile Optimized</span>
                     <span>✓ Free to Use</span>
                 </div>
