Update LiD Coach description with language support

--- a/index.html
+++ b/index.html
@@ -43,12 +43,14 @@
                 <p>
                     Our flagship educational tool designed to help users prepare for the German integration and
                     citizenship tests. It features the full official question catalog, state-specific questions,
-                    and multi-language support (English/German) to ensure everyone has a fair chance at success.
+                    and translations for questions and detailed explanations in 7+ languages—including
+                    Arabic, Farsi, Turkish, Russian, Hindi, Urdu, and Ukrainian—to ensure everyone has a fair chance at
+                    success.
                 </p>
                 <div class="metrics">
-                    <span>✓ 300 General + 10 State Specific Questions</span>
-                    <span>✓ Mobile Optimized</span>
-                    <span>✓ Free to Use</span>
+                    <span>✓ 300 General + 10 State Questions</span>
+                    <span>✓ 7+ Translation Languages</span>
+                    <span>✓ Detailed Explanations</span>
                 </div>
                 <a href="https://lebenindeutschlandcoach.guvvala.xyz" target="_blank" class="cta-link">Launch Practice
                     Tool →</a>
