Update LiD Coach description: Bilingual UI and 8 translations

--- a/index.html
+++ b/index.html
@@ -42,14 +42,15 @@
                 <h3>Leben in Deutschland Coach</h3>
                 <p>
                     Our flagship educational tool designed to help users prepare for the German integration and
-                    citizenship tests. It features the full official question catalog, state-specific questions,
-                    and translations for questions and detailed explanations in 7+ languages—including
-                    Arabic, Farsi, Turkish, Russian, Hindi, Urdu, and Ukrainian—to ensure everyone has a fair chance at
+                    citizenship tests. The application interface is fully bilingual (**German and English**),
+                    and it features translations for questions and detailed explanations in 8 languages—including
+                    English, Arabic, Farsi, Turkish, Russian, Hindi, Urdu, and Ukrainian—to ensure everyone has a fair
+                    chance at
                     success.
                 </p>
                 <div class="metrics">
                     <span>✓ 300 General + 10 State Questions</span>
-                    <span>✓ 7+ Translation Languages</span>
+                    <span>✓ 8 Translation Languages</span>
                     <span>✓ Detailed Explanations</span>
                 </div>
                 <a href="https://lebenindeutschlandcoach.guvvala.xyz" target="_blank" class="cta-link">Launch Practice
