Add Bharath-Saga project to portfolio

--- a/index.html
+++ b/index.html
@@ -56,6 +56,20 @@
                 <a href="https://lebenindeutschlandcoach.guvvala.xyz" target="_blank" class="cta-link">Launch Practice
                     Tool →</a>
             </div>
+
+            <div class="project-card">
+                <h3>Bharath-Saga</h3>
+                <p>
+                    Explore stories, history, and wisdom from Bharath. A dedicated platform sharing rich cultural 
+                    narratives and timeless insights designed to inspire and educate.
+                </p>
+                <div class="metrics">
+                    <span>✓ Cultural Stories</span>
+                    <span>✓ Historical Wisdom</span>
+                    <span>✓ Inspiring Insights</span>
+                </div>
+                <a href="https://bharath-saga.guvvala.xyz/" target="_blank" class="cta-link">Visit Bharath-Saga →</a>
+            </div>
         </section>
 
         <section class="beta-testing">
