Update project contact emails, added bharath-saga@guvvala.xyz

--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,16 @@
         </header>
 
         <section>
-            <p>You can contact me via email at: <a href="mailto:contact@guvvala.xyz">contact@guvvala.xyz</a></p>
+            <p>For general inquiries, reach out to: <a href="mailto:contact@guvvala.xyz">contact@guvvala.xyz</a></p>
+
+            <h3>Project Specific Support</h3>
+            <ul>
+                <li><strong>Leben in Deutschland Coach:</strong> <a
+                        href="mailto:developers@guvvala.xyz">developers@guvvala.xyz</a></li>
+                <li><strong>Bharath-Saga:</strong> <a
+                        href="mailto:bharath-saga@guvvala.xyz">bharath-saga@guvvala.xyz</a></li>
+            </ul>
+
             <p>I strive to respond to all inquiries within 48 hours.</p>
         </section>
 
