--- a/index.html
+++ b/index.html
@@ -60,13 +60,17 @@
             <div class="project-card">
                 <h3>Bharath-Saga</h3>
                 <p>
-                    Explore stories, history, and wisdom from Bharath. A dedicated platform sharing rich cultural 
+                    Explore stories, history, and wisdom from Bharath. A dedicated platform sharing rich cultural
                     narratives and timeless insights designed to inspire and educate.
                 </p>
                 <div class="metrics">
                     <span>✓ Cultural Stories</span>
                     <span>✓ Historical Wisdom</span>
                     <span>✓ Inspiring Insights</span>
+                </div>
+                <div class="contact-info" style="font-size: 0.85rem; margin-top: 10px; color: #666;">
+                    Contact: <a href="mailto:bharath-saga@guvvala.xyz"
+                        style="color: #007bff; text-decoration: none;">bharath-saga@guvvala.xyz</a>
                 </div>
                 <a href="https://bharath-saga.guvvala.xyz/" target="_blank" class="cta-link">Visit Bharath-Saga →</a>
             </div>
