Integrate Bharath-Saga and add top navigation bar

--- a/index.html
+++ b/index.html
@@ -16,7 +16,15 @@
 <body>
     <div class="container">
         <header>
-            <h1>guvvala.xyz</h1>
+            <div class="header-main">
+                <h1>guvvala.xyz</h1>
+                <nav class="top-nav">
+                    <a href="#projects">Projects</a>
+                    <a href="https://lebenindeutschlandcoach.guvvala.xyz" target="_blank">LID Coach</a>
+                    <a href="https://bharath-saga.guvvala.xyz/" target="_blank">Bharath-Saga</a>
+                    <a href="contact.html">Contact</a>
+                </nav>
+            </div>
             <p class="tagline">Empowering growth through simple, effective digital tools.</p>
         </header>
 
@@ -36,7 +44,7 @@
             </p>
         </section>
 
-        <section class="projects">
+        <section class="projects" id="projects">
             <h2>Featured Applications</h2>
             <div class="project-card">
                 <h3>Leben in Deutschland Coach</h3>
@@ -55,6 +63,20 @@
                 </div>
                 <a href="https://lebenindeutschlandcoach.guvvala.xyz" target="_blank" class="cta-link">Launch Practice
                     Tool →</a>
+            </div>
+
+            <div class="project-card">
+                <h3>Bharath-Saga</h3>
+                <p>
+                    Explore stories, history, and wisdom from Bharath. A dedicated platform sharing rich cultural 
+                    narratives and timeless insights designed to inspire and educate.
+                </p>
+                <div class="metrics">
+                    <span>✓ Cultural Stories</span>
+                    <span>✓ Historical Wisdom</span>
+                    <span>✓ Inspiring Insights</span>
+                </div>
+                <a href="https://bharath-saga.guvvala.xyz/" target="_blank" class="cta-link">Visit Bharath-Saga →</a>
             </div>
         </section>
 
