--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <div class="project-card">
                 <h3>Bharath-Saga</h3>
                 <p>
-                    Explore stories, history, and wisdom from Bharath. A dedicated platform sharing rich cultural 
+                    Explore stories, history, and wisdom from Bharath. A dedicated platform sharing rich cultural
                     narratives and timeless insights designed to inspire and educate.
                 </p>
                 <div class="metrics">
@@ -80,32 +80,25 @@
             </div>
         </section>
 
-        <section class="beta-testing">
-            <h2>Android App Beta Testing</h2>
+        <section class="app-release">
+            <h2>Android App Available Now</h2>
             <p>
-                We are currently in the <strong>Closed Testing</strong> phase for our upcoming Android application.
-                Your feedback is crucial for improving the user experience and ensuring app stability.
-                To participate, please follow these two essential steps:
+                We are excited to announce that the <strong>Leben in Deutschland Coach</strong> is now live!
+                Download the official app to practice on the go, track your progress, and prepare for your test with
+                ease.
             </p>
 
-            <div class="test-steps">
-                <div class="step-card">
-                    <div class="step-number">Step 1</div>
-                    <h3>Join the Testing Group</h3>
-                    <p>Google Play requires testers to be part of a registered group. Join our official community to
-                        gain access.</p>
-                    <a href="https://groups.google.com/g/lid-training-app-closed-testers" target="_blank"
-                        class="step-btn">Join Testing Group →</a>
+            <div class="release-card">
+                <h3>Get it on Google Play</h3>
+                <p>Install the app directly from the store to satisfy your mobile learning needs.</p>
+
+                <div class="qr-box">
+                    <img src="assets/img/app-qr.png" alt="Scan to Download App" class="qr-image">
+                    <span class="scan-hint">Scan to Install</span>
                 </div>
 
-                <div class="step-card">
-                    <div class="step-number">Step 2</div>
-                    <h3>Download & Test</h3>
-                    <p>Once joined, use the link below to opt-in as a tester and download the app directly from the Play
-                        Store.</p>
-                    <a href="https://play.google.com/store/apps/details?id=com.survval.lidcoach" target="_blank"
-                        class="step-btn">Get App on Play Store →</a>
-                </div>
+                <a href="https://play.google.com/store/apps/details?id=com.survval.lidcoach" target="_blank"
+                    class="download-btn">Download Now →</a>
             </div>
 
             <div class="support-box">
@@ -113,7 +106,6 @@
                 <p>Encountered a bug or have a suggestion? Reach out to us directly:</p>
                 <ul>
                     <li><strong>Email:</strong> developers@guvvala.xyz</li>
-                    <li><strong>Community:</strong> Post in the Google Group for shared support</li>
                 </ul>
             </div>
         </section>
