Final adjustments to side-by-side layout

--- a/index.html
+++ b/index.html
@@ -46,23 +46,45 @@
 
         <section class="projects" id="projects">
             <h2>Featured Applications</h2>
-            <div class="project-card">
-                <h3>Leben in Deutschland Coach</h3>
-                <p>
-                    Our flagship educational tool designed to help users prepare for the German integration and
-                    citizenship tests. The application interface is fully bilingual (**German and English**),
-                    and it features translations for questions and detailed explanations in 8 languages—including
-                    English, Arabic, Farsi, Turkish, Russian, Hindi, Urdu, and Ukrainian—to ensure everyone has a fair
-                    chance at
-                    success.
-                </p>
-                <div class="metrics">
-                    <span>✓ 300 General + 10 State Questions</span>
-                    <span>✓ 8 Translation Languages</span>
-                    <span>✓ Detailed Explanations</span>
+            <div class="project-group-lid">
+                <div class="project-card">
+                    <h3>Leben in Deutschland Coach</h3>
+                    <p>
+                        Our flagship educational tool designed to help users prepare for the German integration and
+                        citizenship tests. The application interface is fully bilingual (**German and English**).
+                    </p>
+                    <div class="metrics">
+                        <span>✓ 300+ Questions</span>
+                        <span>✓ 8 Languages</span>
+                        <span>✓ Detailed Explanations</span>
+                    </div>
+                    <a href="https://lebenindeutschlandcoach.guvvala.xyz" target="_blank" class="cta-link">Launch Web
+                        Tool →</a>
                 </div>
-                <a href="https://lebenindeutschlandcoach.guvvala.xyz" target="_blank" class="cta-link">Launch Practice
-                    Tool →</a>
+
+                <div class="app-release project-card" style="background-color: #f0f7ff; border-color: #d1e9ff;">
+                    <h3 style="color: #1e293b; margin-bottom: 0.5rem;">Android App Available Now</h3>
+                    <p>
+                        <strong>LID Coach</strong> is now live on Google Play!
+                        Practice on the go.
+                    </p>
+
+                    <div class="release-card"
+                        style="box-shadow: none; padding: 1rem; margin: 0 auto; border: none; background: transparent;">
+                        <div class="qr-box" style="margin: 0 0 1rem 0;">
+                            <img src="assets/img/app-qr.png" alt="Scan to Download App" class="qr-image"
+                                style="width: 120px; height: 120px;">
+                        </div>
+
+                        <a href="https://play.google.com/store/apps/details?id=com.survval.lidcoach" target="_blank"
+                            class="download-btn" style="padding: 0.8rem 1.6rem; font-size: 1rem;">Download Now →</a>
+                    </div>
+
+                    <div class="support-box"
+                        style="margin-top: 1rem; border: none; background: transparent; padding: 0;">
+                        <p style="font-size: 0.9rem; margin-bottom: 0;">Support: developers@guvvala.xyz</p>
+                    </div>
+                </div>
             </div>
 
             <div class="project-card">
@@ -80,35 +102,7 @@
             </div>
         </section>
 
-        <section class="app-release">
-            <h2>Android App Available Now</h2>
-            <p>
-                We are excited to announce that the <strong>Leben in Deutschland Coach</strong> is now live!
-                Download the official app to practice on the go, track your progress, and prepare for your test with
-                ease.
-            </p>
 
-            <div class="release-card">
-                <h3>Get it on Google Play</h3>
-                <p>Install the app directly from the store to satisfy your mobile learning needs.</p>
-
-                <div class="qr-box">
-                    <img src="assets/img/app-qr.png" alt="Scan to Download App" class="qr-image">
-                    <span class="scan-hint">Scan to Install</span>
-                </div>
-
-                <a href="https://play.google.com/store/apps/details?id=com.survval.lidcoach" target="_blank"
-                    class="download-btn">Download Now →</a>
-            </div>
-
-            <div class="support-box">
-                <h4>Help & Support</h4>
-                <p>Encountered a bug or have a suggestion? Reach out to us directly:</p>
-                <ul>
-                    <li><strong>Email:</strong> developers@guvvala.xyz</li>
-                </ul>
-            </div>
-        </section>
 
         <section class="mission">
             <h2>Our Vision</h2>
